tests/miz/pass/types/pass_type_elaboration_parenthesized_reserved_variable_equality_001.miz
reserve x for set;
theorem ParenthesizedReservedVariableEqualityPayloadBoundary: (x) = x;
