tests/miz/fail/parser/fail_parser_set_comprehension_missing_generator_001.miz
theorem MissingGenerator: { x where is set : thesis } = y;
